--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
@@ -76,10 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lunes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dia_semana(numero):\n",
+    "    if 1 <= numero <= 7:\n",
+    "        dias = (\"lunes\", \"martes\", \"miércoles\", \"jueves\", \"viernes\", \"sábado\", \"domingo\")\n",
+    "        return dias[numero -1]\n",
+    "    else:\n",
+    "        return \"Número fuera del rango válido (1-7)\"\n",
+    "\n",
+    "print(dia_semana(1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,6 +160,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 7 6 5 4 3 2 1 \n",
+      "7 6 5 4 3 2 1 \n",
+      "6 5 4 3 2 1 \n",
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def piramide (filas):\n",
+    "    \n",
+    "    while filas > 0:\n",
+    "        for i in range(filas, 0, -1):\n",
+    "            print (i, end = \" \")\n",
+    "        print() #Salto de línea\n",
+    "        \n",
+    "        filas = filas-1\n",
+    "    \n",
+    "piramide(8)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,10 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 5 es igual al número 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def comparacion(a,b):\n",
+    "    if a == b:\n",
+    "        print(f\"El número {a} es igual al número {b}\")\n",
+    "    elif a < b:\n",
+    "        print(f\"El número {a} es menor al número {b}\")\n",
+    "    elif a > b:\n",
+    "        print(f\"El número {a} es mayor al número {b}\")\n",
+    "    \n",
+    "comparacion(5,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,10 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contador_letras(texto,letra):\n",
+    "    texto = texto.lower()       #Así poner todas las letras en minúsculas para contar todas\n",
+    "    return texto.count(letra)\n",
+    "    \n",
+    "\n",
+    "contador_letras(\"AméricA es muy bonita y muy grande\", \"a\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +322,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'d': 1,\n",
+       " 'a': 7,\n",
+       " 'l': 2,\n",
+       " 'e': 4,\n",
+       " 't': 1,\n",
+       " 'u': 2,\n",
+       " 'c': 2,\n",
+       " 'r': 3,\n",
+       " 'p': 1,\n",
+       " 'o': 1,\n",
+       " 'g': 1,\n",
+       " 'í': 1,\n",
+       " 'm': 1,\n",
+       " 'n': 1}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def conteo_letras(texto):\n",
+    "    diccionario = {}\n",
+    "    for i in texto.lower():\n",
+    "        if i == \" \" or i == \",\":\n",
+    "            continue\n",
+    "        elif i in diccionario:\n",
+    "           diccionario[i] += 1\n",
+    "        else:\n",
+    "            diccionario[i] = 1\n",
+    "    return diccionario\n",
+    "\n",
+    "\n",
+    "conteo_letras(\"Dale a tu cuerpo alegría, Macarena\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,6 +394,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Juana Juana King-Kong'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def frase(*args):\n",
+    "    return \" \".join(args)\n",
+    "\n",
+    "frase(\"A\", \"Juana\", \"Juana\", \"King-Kong\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -292,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
