--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -59,10 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "[x**2 for x in ejer_2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los duplicados de 'un': ocupan las posiciones [0, 7]\n",
+      "Los duplicados de 'es': ocupan las posiciones [3, 13]\n",
+      "Los duplicados de 'binario': ocupan las posiciones [2, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "\n",
+    "def encontrar_duplicados_indices_insensible(lista, duplicado):\n",
+    "    indices_duplicados = []                 # crea una lista en la que almacenará los duplicados\n",
+    "\n",
+    "    for i, elemento in enumerate(lista):    #enumerate se utiliza para obtener tanto el índice como el elemento en cada iteración.\n",
+    "        if elemento.lower() == duplicado.lower():  #Sensibilidad a las mayusc/minusc\n",
+    "            indices_duplicados.append(i)\n",
+    "\n",
+    "    return indices_duplicados\n",
+    "\n",
+    "# Elementos a buscar duplicados\n",
+    "elementos_a_buscar = [\"un\", \"es\", \"binario\"]\n",
+    "\n",
+    "# Buscar duplicados e imprimir resultados\n",
+    "for elemento in elementos_a_buscar:\n",
+    "    indices_duplicados = encontrar_duplicados_indices_insensible(ejer_3, elemento)\n",
+    "    print(f\"Los duplicados de '{elemento}': ocupan las posiciones {indices_duplicados}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +141,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "(19, 3, 29, 45, 67, 78)\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "\n",
+    "#Número de repeticiones del elemento 3\n",
+    "print(ejer_9.count(3))\n",
+    "\n",
+    "#Nueva tupla con elementos desde posición 5 a la 10\n",
+    "nueva_tupla = (ejer_9[4:10])\n",
+    "print(nueva_tupla)\n",
+    "\n",
+    "#Número de elementos de la tupla\n",
+    "print(len(ejer_9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(60 in ejer_3) #Dará como resultado True o False en función de si está (True) o no está (False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "\n",
+    "#Convertir tupla en lista\n",
+    "lista = list(ejer_9)\n",
+    "print(lista)\n",
+    "\n",
+    "#Convertir tupla en set\n",
+    "\n",
+    "conjunto = set(ejer_9)\n",
+    "print(conjunto)\n",
+    "\n",
+    "#Convertir tupla en diccionario usando índices\n",
+    "\n",
+    "diccionario = {indice: valor for indice, valor in enumerate(ejer_9)}\n",
+    "print(diccionario)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de multiplicar todos los valores del diccionario es 19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "producto_valores = 1\n",
+    "for valor in ejer_6.values():\n",
+    "    producto_valores *= valor\n",
+    "print(f\"El resultado de multiplicar todos los valores del diccionario es {producto_valores}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,14 +280,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "diccionario_libreria = {\"titulo\": \"El Código Da Vinci\", \"autor\": \"Dan Brown\", \"idioma original\": \"inglés\", \"año de publicación\": 2003}\n",
+    "\n",
+    "#No sé si los apartados 2 y 3 del ejercicio se refieren a lo siguiente:\n",
+    "libreria = [\"Don Quijote\", \"La Celestina\", \"Rinconete y Cortadillo\", \"Cien años de soledad\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}]\n",
+      "[{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#O tal vez se refería a esto:\n",
+    "diccionario_libreria = {\n",
+    "    \"titulo\": \"El Código Da Vinci\",\n",
+    "     \"autor\": \"Dan Brown\",\n",
+    "     \"idioma original\": \"inglés\",\n",
+    "     \"año de publicación\": 2003}\n",
+    "\n",
+    "libreria = [] #Como las listas son mutables y pueden tener diferentes elementos puede incluir diccionarios dentro.\n",
+    "\n",
+    "libro_1 = {\n",
+    "    \"titulo\": \"Don Quijote de La Mancha\",\n",
+    "     \"autor\": \"Miguel de Cervantes\",\n",
+    "     \"idioma original\": \"castellano\",\n",
+    "     \"año de publicación\": 1605}\n",
+    "\n",
+    "libro_2 = {\n",
+    "    \"titulo\": \"La Celestina\",\n",
+    "     \"autor\": \"Fernando de Rojas\",\n",
+    "     \"idioma original\": \"castellano\",\n",
+    "     \"año de publicación\": 1499}\n",
+    "\n",
+    "libro_3 = {\n",
+    "    \"titulo\": \"Cien años de soledad\",\n",
+    "     \"autor\": \"Gabriel García Márquez\",\n",
+    "     \"idioma original\": \"castellano\",\n",
+    "     \"año de publicación\": 1967}\n",
+    "\n",
+    "libro_4 = {\n",
+    "    \"titulo\": \"Cantares gallegos\",\n",
+    "     \"autor\": \"Rosalía de Castro\",\n",
+    "     \"idioma original\": \"gallego\",\n",
+    "     \"año de publicación\": 1863}\n",
+    "\n",
+    "libreria.append(diccionario_libreria)\n",
+    "print(libreria)\n",
+    "\n",
+    "libreria.append(libro_1)\n",
+    "libreria.append(libro_2)\n",
+    "libreria.append(libro_3)\n",
+    "libreria.append(libro_4)\n",
+    "\n",
+    "print(libreria)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +359,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'esperanto', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'esperanto', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'esperanto', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'esperanto', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'esperanto', 'año de publicación': 1863}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario_libreria[\"idioma original\"] = \"esperanto\"\n",
+    "libro_1[\"idioma original\"] = \"esperanto\"\n",
+    "libro_2[\"idioma original\"] = \"esperanto\"\n",
+    "libro_3[\"idioma original\"] = \"esperanto\"\n",
+    "libro_4[\"idioma original\"] = \"esperanto\"\n",
+    "\n",
+    "print(libreria)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,10 +391,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ese no lo tengo, ¿mola?\n"
+     ]
+    }
+   ],
+   "source": [
+    "peticion = input(\"¿Qué libro andas buscando?\")\n",
+    "encontrado = False\n",
+    "\n",
+    "for prestamo in libreria:\n",
+    "    if prestamo[\"titulo\"].lower() == peticion.lower():\n",
+    "        encontrado = True\n",
+    "        print(\"El libro está en nuestra librería\")\n",
+    "        break\n",
+    "else:   #Si else está a la altura del indentado de 'if' repite el print tantas veces como iteraciones haga el bucle\n",
+    "        print(\"Ese no lo tengo, ¿mola?\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,7 +444,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "libreria = [{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n",
+    "\n",
+    "def busqueda_libro()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +460,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La dirección NO es válida\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validar_correo(correo):\n",
+    "    \n",
+    "    if \"@\" in correo:\n",
+    "        print(\"La dirección es válida\")\n",
+    "    else:\n",
+    "        print(\"La dirección NO es válida\")\n",
+    "\n",
+    "correo_propuesto = input(\"Introduce tu dirección de correo\")\n",
+    "validar_correo(correo_propuesto)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,15 +500,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Número de DNI NOOOO aceptado'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def validez_dni(dni, letra):\n",
+    "    palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "\n",
+    "    if 7> len(str(dni)) > 8 or letra not in palabra:\n",
+    "        return \"Número de DNI NOOOO aceptado\"\n",
+    "    else: \n",
+    "        return \"Número de DNI ACEPTADO\"\n",
+    "\n",
+    "dni_propuesto = int(input(\"Escribe los números de tu DNI\"))\n",
+    "letra_propuesta = input(\"Escribe la letra de tu DNI\")\n",
+    "validez_dni(dni_propuesto,letra_propuesta)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
