--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -221,14 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n",
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n"
      ]
     }
    ],
@@ -236,7 +237,15 @@
     "ejer_3_1 = {1: 11, 2: 22}\n",
     "ejer_3_2 = {3: 33, 4: 44}\n",
     "\n",
-    "print(ejer_3_1.update(ejer_3_2))"
+    "#Unir con update\n",
+    "\n",
+    "ejer_3_1.update(ejer_3_2)\n",
+    "print(ejer_3_1)\n",
+    "\n",
+    "#Unir con bucle\n",
+    "for clave, valor in ejer_3_2.items():\n",
+    "    ejer_3_1[clave] = valor\n",
+    "print(ejer_3_1)"
    ]
   },
   {
@@ -271,10 +280,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3}\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_ejer_4 = {1,2,3}\n",
+    "\n",
+    "#Añade un elemento\n",
+    "set_ejer_4.add(4)\n",
+    "print(set_ejer_4)\n",
+    "\n",
+    "#Elmina el último elemento añadido\n",
+    "set_ejer_4.remove(4)\n",
+    "print(set_ejer_4)\n",
+    "\n",
+    "#Elimina el elemento 10, si está\n",
+    "set_ejer_4.discard(10)   #discard es como remove pero si en discard no está el elemento señalado, no da error, mientras que en remove sí da error si pides borrar un elemento que no está en el set.\n",
+    "print(set_ejer_4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,6 +381,46 @@
     "Elimina los duplicados de la siguiente lista utilizando un set como instrumento intermedio.\n",
     "\n",
     ">```ejer_6 = [11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11]```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mlen\u001b[39m(lista_ejer_6)\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;66;03m#Divir la lista en dos listas\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m set1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista_ejer_6\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m set2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(lista_ejer_6[\u001b[38;5;241m6\u001b[39m:])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = [11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11]\n",
+    "\n",
+    "#Se me ocurre pasar el set a tupla, y la tupla a lista para poder usar la mutabilidad de los elementos\n",
+    "tuple(ejer_6)\n",
+    "\n",
+    "#Se me ocurre dividir el set en dos sets y ver la UNIÓN de los elementos (set1 | set2)\n",
+    "    #Para ello, primero convertir el set en lista\n",
+    "lista_ejer_6 = list(ejer_6)\n",
+    "len(lista_ejer_6)\n",
+    "\n",
+    "    #Divir la lista en dos listas\n",
+    "set1 = set(lista_ejer_6[0:6])\n",
+    "set2 = set(lista_ejer_6[6:])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n"
    ]
   },
   {
