--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -426,10 +426,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los duplicados de la palabra binario están en las posiciones [0, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "\n",
+    "def encontrar_duplicados(lista, palabra):  \n",
+    "\n",
+    "    indices_repetidos = [i for i, elemento in enumerate(lista)  if elemento.lower() == palabra.lower()]  \n",
+    "    return indices_duplicados            \n",
+    "\n",
+    "palabra_propuesta = input(\"¿Qué palabra de la lista quieres saber si está repetida y sus posiciones en la lista?\")\n",
+    "indices_duplicados = encontrar_duplicados(ejer_3, palabra_propuesta)\n",
+    "if indices_duplicados:\n",
+    "    print(f\"Los duplicados de la palabra {palabra_propuesta} están en las posiciones {indices_duplicados}\")\n",
+    "else:\n",
+    "    print(\"La palabra {palabra_propuesta} no está repetida\")"
+   ]
   },
   {
    "cell_type": "markdown",
