--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -465,13 +465,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}], 'El Código Da Vinci')\n"
+     ]
+    }
+   ],
    "source": [
-    "libreria = [{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n",
+    "#Uso de librería como variable posicional \n",
+    "#Uso de título como argumento clave-valor cuyo valor es \"ninguno\"\n",
     "\n",
-    "def busqueda_libro()"
+    "def busqueda_libro(lista, titulo = \"ninguno\"):\n",
+    "    encontrado = False\n",
+    "\n",
+    "for prestamo in libreria:\n",
+    "    if prestamo[\"titulo\"].lower() == peticion.lower():\n",
+    "        encontrado = True\n",
+    "        print(\"El libro está en nuestra librería\")\n",
+    "\n",
+    "libreria = [{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n",
+    "resultado = (libreria,\"El Código Da Vinci\")\n",
+    "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Siguiendo el ejemplo de POO del vídeo de la unidad 2 del sprint 2:\n",
+    "\n",
+    "def buscar_libro(libreria, titulo):\n",
+    "    for libro in libreria:\n",
+    "        if libro[\"titulo\"] == titulo:\n",
+    "            return libro\n",
+    "        \n",
+    "print(buscar_libro(libreria, \"ninguno\"))\n",
+    "    "
    ]
   },
   {
