--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
@@ -100,6 +100,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Velocidad al andar: 4\n",
+      "Velocidad de parar: 0\n",
+      "El perro es de la raza caniche, tiene el pelo de color Marrón\n",
+      "Dueño: False\n",
+      "GUAU! ¡Qué bonito soy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Perro:\n",
+    "    patas = 4\n",
+    "    orejas = 2\n",
+    "    ojos = 2\n",
+    "    velocidad = 0\n",
+    "\n",
+    "    def __init__(self, raza, pelo = \"Marrón\", dueño = False):\n",
+    "        self.raza = raza\n",
+    "        self.pelo = pelo\n",
+    "        self.dueño = dueño\n",
+    "    \n",
+    "    def andar (self, aumento_velocidad):\n",
+    "        self.velocidad  += aumento_velocidad\n",
+    "        \n",
+    "    def parar(self):\n",
+    "         self.velocidad = 0\n",
+    "    def ladrar (self, mensaje):\n",
+    "        return \"GUAU! \" + mensaje \n",
+    "   \n",
+    "\n",
+    "perrito = Perro(raza = \"caniche\")\n",
+    "perrito.andar(4)\n",
+    "print(f\"Velocidad al andar: {perrito.velocidad}\")\n",
+    "\n",
+    "perrito.parar()\n",
+    "print(f\"Velocidad de parar: {perrito.velocidad}\")\n",
+    "\n",
+    "ladrido = perrito.ladrar(\"¡Qué bonito soy!\")\n",
+    "\n",
+    "print(f\"El perro es de la raza {perrito.raza}, tiene el pelo de color {perrito.pelo}\")\n",
+    "print(f\"Dueño: {perrito.dueño}\")\n",
+    "print(ladrido)\n",
+    "    \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
