--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -96,11 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Jeff = User('Jeff', 70, True)\n",
@@ -120,6 +116,80 @@
     "\n",
     "Jeff.add_cash(20.00) # Devuelve 'Jeff tiene 118.'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Usuario:\n",
+    "    def __init__(self, nombre, saldo):\n",
+    "        self.nombre = nombre\n",
+    "        self.saldo = saldo\n",
+    "    def withdraw(self, dinero_a_retirar):\n",
+    "        dinero_a_retirar = int(input(\"¿Cuánto dinero desea retirar)\"))\n",
+    "        if dinero_a_retirar > self.saldo:\n",
+    "            raise ValueError(\"Ya quisieras tú sacar ese dinero, pero no puedes porque no lo tienes.\")\n",
+    "        self.saldo -= dinero_a_retirar\n",
+    "        print(f\"El saldo restante de {self.nombre} es de {self.saldo}.\")\n",
+    "    \n",
+    "    def add_cash (self, saldo):\n",
+    "        ingreso = int(input(\"¿Cuánto dinero quieres ingresar?\"))\n",
+    "        self.saldo += ingreso\n",
+    "        print(f\"Tras el ingreso, el saldo de {self.nombre} es de {self.saldo}.\")\n",
+    "\n",
+    "    #No entiendo muy bien este apartado del método check. Entiendo que tengo que comparar los atributos de dos usuarios\n",
+    "    def check (self, nombre, saldo):\n",
+    "        self.saldo += ingreso\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El saldo restante de Pepito es de 80.\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "cliente_1 = Usuario(nombre = \"Pepito\", saldo = 100)\n",
+    "print(cliente_1.withdraw(20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tras el ingreso, el saldo de Lolita es de 1700.\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "cliente_2 = Usuario(nombre = \"Lolita\", saldo = 1200)\n",
+    "print(cliente_2.add_cash(500))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
