--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mlen\u001b[39m(lista_ejer_6)\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;66;03m#Divir la lista en dos listas\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m set1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlista_ejer_6\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m set2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(lista_ejer_6[\u001b[38;5;241m6\u001b[39m:])\n",
+      "Cell \u001b[1;32mIn[47], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m ejer_6 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m11\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4.5\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesto\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4.5\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesto\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquizás\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;241m11\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m no_repetidos \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mset\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#Se me ocurre pasar el set a tupla, y la tupla a lista para poder usar la mutabilidad de los elementos\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mtuple\u001b[39m(ejer_6)\n",
       "\u001b[1;31mTypeError\u001b[0m: 'set' object is not callable"
      ]
     }
@@ -403,8 +403,11 @@
    "source": [
     "ejer_6 = [11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11]\n",
     "\n",
+    "no_repetidos = set() \n",
+    "\n",
     "#Se me ocurre pasar el set a tupla, y la tupla a lista para poder usar la mutabilidad de los elementos\n",
     "tuple(ejer_6)\n",
+    "set(tuple(ejer_6))\n",
     "\n",
     "#Se me ocurre dividir el set en dos sets y ver la UNIÓN de los elementos (set1 | set2)\n",
     "    #Para ello, primero convertir el set en lista\n",
